[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston_window = "0.121.0"
image = "0.23.14"
rand = "0.8.4"
rayon = "1.5"
find_folder = "0.3.0"
glam = "0.20.2"